restore state after connect/reconnect to web clients
Signed-off-by: Karsten Gebbert <karsten@null2.net>

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link type="text/css" rel="stylesheet" media="all" href="css/style.css"></link>
   </head>
   <body>
-    <div class="box" id="box-1"></div>
-    <div class="box" id="box-2"></div>
-    <div class="box" id="box-3"></div>
-    <div class="box" id="box-4"></div>
-    <div class="box" id="box-5"></div>
-    <div class="box" id="box-6"></div>
-    <div class="box" id="box-7"></div>
-    <div class="box" id="box-8"></div>
+    <div class="track" id="bd-0">
+      <div class="box" id="step-0"></div>
+      <div class="box" id="step-1"></div>
+      <div class="box" id="step-2"></div>
+      <div class="box" id="step-3"></div>
+      <div class="box" id="step-4"></div>
+      <div class="box" id="step-5"></div>
+      <div class="box" id="step-6"></div>
+      <div class="box" id="step-7"></div>
+    </div>
  </body>
 </html>
