simple login/session working
Signed-off-by: Karsten Gebbert <karsten@null2.net>

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </head>
   <body>
 
-    <div id="login-box">
+    <div id="login-box" style="display:none;">
       <div class="inlay">
         Enter a Nickname:
-        <input id="nick-name" class="login-input" type="text" />
+        <input id="nick-name" class="login-input" type="text" /><br/>
         <input id="submit-nick" class="login-submit" type="submit" value="Submit">
       </div>
     </div>
-    <div id="overlay"></div>
+    <div id="overlay" style="display:none;"></div>
 
     <div id="main">
       <div class="sequencer">
