more work on users & sessions
Signed-off-by: Karsten Gebbert <karsten@null2.net>

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <div id="overlay" style="display:none;"></div>
 
     <div id="main">
-      <div class="sequencer">
+      <div id="users"></div>
 
+      <div class="sequencer">
         <div class="machine">
           <img id="rattle" data-track-id="rattle-1" src="img/rattle.png" />
           <img id="hats" data-track-id="hats-2" src="img/hats.png" />
