--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@
 
       <div class="sequencer">
         <div class="machine">
-          <img id="rattle" data-track-id="rattle-1" src="img/rattle.png" />
-          <img id="hats" data-track-id="hats-2" src="img/hats.png" />
+          <img id="carabassa" data-track-id="carabassa-10" src="img/rattle.png" />
+          <img id="tophats" data-track-id="tophats-7" src="img/tophats.png" />
+          <img id="bottomhats" data-track-id="bottomhats-8" src="img/bottomhats.png" />
           <img id="bd" data-track-id="bd-0" class="track-selected" src="img/bd.png" />
-          <img id="snare" data-track-id="snare-3" src="img/snare.png" />
-          <img id="hands" data-track-id="hands-4" src="img/hands.png" />
-          <img id="cym" data-track-id="cym-5" src="img/cym.png" />
-          <img id="hb" data-track-id="hb-6" src="img/hb.png" />
-          <img id="clap" data-track-id="clap-7" src="img/clap.png" />
-          <img id="cong" data-track-id="cong-8" src="img/cong.png" />
+          <img id="topsnare" data-track-id="topsnare-1" src="img/topsnare.png" />
+          <img id="bottomsnare" data-track-id="bottomsnare-2" src="img/bottomsnare.png" />
+          <img id="cym" data-track-id="cym-11" src="img/cym.png" />
+          <img id="cowbell" data-track-id="cowbell-12" src="img/hb.png" />
+          <img id="clap" data-track-id="clap-9" src="img/clap.png" />
+          <img id="small-cong" data-track-id="smallcong-3" src="img/leftcong.png" />
+          <img id="medium-cong" data-track-id="mediumcong-4" src="img/middlecong.png" />
+          <img id="large-cong" data-track-id="largecong-5" src="img/rightcong.png" />
+          <img id="claves" data-track-id="claves-6" src="img/hands.png" />
         </div>
 
         <img id="tempo-dial" src="img/tempo-dial.jpg" />
@@ -89,7 +93,7 @@
 
               <div class="clearer"></div>
 
-              <div class="track hidden" id="rattle-1">
+              <div class="track hidden" id="topsnare-1">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
@@ -110,7 +114,7 @@
 
               <div class="clearer"></div>
 
-              <div class="track hidden" id="hats-2">
+              <div class="track hidden" id="bottomsnare-2">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
@@ -131,7 +135,7 @@
 
               <div class="clearer"></div>
 
-              <div class="track hidden" id="snare-3">
+              <div class="track hidden" id="smallcong-3">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
@@ -152,7 +156,49 @@
 
               <div class="clearer"></div>
 
-              <div class="track hidden" id="hands-4">
+              <div class="track hidden" id="mediumcong-4">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="largecong-5">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="claves-6">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
@@ -173,7 +219,92 @@
               
               <div class="clearer"></div>
 
-              <div class="track hidden" id="cym-5">
+              <div class="track hidden" id="tophats-7">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="bottomhats-8">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="clap-9">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="carabassa-10">
+                <div class="box red" id="step-0"><div class="step-led"></div></div>
+                <div class="box red" id="step-1"><div class="step-led"></div></div>
+                <div class="box red" id="step-2"><div class="step-led"></div></div>
+                <div class="box red" id="step-3"><div class="step-led"></div></div>
+                <div class="box orange" id="step-4"><div class="step-led"></div></div>
+                <div class="box orange" id="step-5"><div class="step-led"></div></div>
+                <div class="box orange" id="step-6"><div class="step-led"></div></div>
+                <div class="box orange" id="step-7"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
+                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
+                <div class="box white" id="step-12"><div class="step-led"></div></div>
+                <div class="box white" id="step-13"><div class="step-led"></div></div>
+                <div class="box white" id="step-14"><div class="step-led"></div></div>
+                <div class="box white" id="step-15"><div class="step-led"></div></div>
+              </div>
+
+
+              <div class="clearer"></div>
+
+              <div class="track hidden" id="cym-11">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
@@ -194,49 +325,7 @@
               
               <div class="clearer"></div>
 
-              <div class="track hidden" id="hb-6">
-                <div class="box red" id="step-0"><div class="step-led"></div></div>
-                <div class="box red" id="step-1"><div class="step-led"></div></div>
-                <div class="box red" id="step-2"><div class="step-led"></div></div>
-                <div class="box red" id="step-3"><div class="step-led"></div></div>
-                <div class="box orange" id="step-4"><div class="step-led"></div></div>
-                <div class="box orange" id="step-5"><div class="step-led"></div></div>
-                <div class="box orange" id="step-6"><div class="step-led"></div></div>
-                <div class="box orange" id="step-7"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
-                <div class="box white" id="step-12"><div class="step-led"></div></div>
-                <div class="box white" id="step-13"><div class="step-led"></div></div>
-                <div class="box white" id="step-14"><div class="step-led"></div></div>
-                <div class="box white" id="step-15"><div class="step-led"></div></div>
-              </div>
-
-              <div class="clearer"></div>
-
-              <div class="track hidden" id="clap-7">
-                <div class="box red" id="step-0"><div class="step-led"></div></div>
-                <div class="box red" id="step-1"><div class="step-led"></div></div>
-                <div class="box red" id="step-2"><div class="step-led"></div></div>
-                <div class="box red" id="step-3"><div class="step-led"></div></div>
-                <div class="box orange" id="step-4"><div class="step-led"></div></div>
-                <div class="box orange" id="step-5"><div class="step-led"></div></div>
-                <div class="box orange" id="step-6"><div class="step-led"></div></div>
-                <div class="box orange" id="step-7"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-8"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-9"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-10"><div class="step-led"></div></div>
-                <div class="box yellow" id="step-11"><div class="step-led"></div></div>
-                <div class="box white" id="step-12"><div class="step-led"></div></div>
-                <div class="box white" id="step-13"><div class="step-led"></div></div>
-                <div class="box white" id="step-14"><div class="step-led"></div></div>
-                <div class="box white" id="step-15"><div class="step-led"></div></div>
-              </div>
-
-              <div class="clearer"></div>
-
-              <div class="track hidden" id="cong-8">
+              <div class="track hidden" id="cowbell-12">
                 <div class="box red" id="step-0"><div class="step-led"></div></div>
                 <div class="box red" id="step-1"><div class="step-led"></div></div>
                 <div class="box red" id="step-2"><div class="step-led"></div></div>
