--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>seq</title>
     <meta charset="UTF-8" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/screenfull.js"></script>
     <script src="js/zepto.js"></script>
     <script src="js/zepto.cookie.js"></script>
     <script src="js/client.js"></script>
