--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   </head>
   <body>
 
-    <div id="login-box" style="display:none;">
-      <div class="inlay">
-        Enter a Nickname:
-        <input id="nick-name" class="login-input" type="text" /><br/>
-        <input id="submit-nick" class="login-submit" type="submit" value="Submit">
+    <div id="overlay" style="display:none;">
+      <div id="login-box">
+        <div class="inlay">
+          <div>Start Application.</div>
+          <input id="submit-nick" class="login-submit" type="submit" value="Submit">
+        </div>
       </div>
     </div>
-    <div id="overlay" style="display:none;"></div>
 
     <div id="main">
       <div id="users"></div>
