--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
   <head>
     <title>seq</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="user-scalable=no" />
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/screenfull.js"></script>
     <script src="js/zepto.js"></script>
     <script src="js/zepto.cookie.js"></script>
     <script src="js/client.js"></script>
     <link type="text/css" rel="stylesheet" media="all" href="css/fonts.css"></link>
-    <link type="text/css" rel="stylesheet" media="all" href="css/style.css"></link>
-    <link type="text/css" rel="stylesheet" media="all" href="css/animations.css"></link>
+    <link type="text/css" rel="stylesheet" media="screen" href="css/general.css"></link>
+    <link type="text/css" rel="stylesheet" media="screen and (orientation:landscape) and (min-width: 981px) and (min-height: 564px)" href="css/style.css"></link>
+    <link type="text/css" rel="stylesheet" media="screen" href="css/animations.css"></link>
+    <link type="text/css" rel="stylesheet" media="screen and (orientation:landscape) and (max-width: 980px) and (max-height: 563px)" href="css/tablets.css"></link>
   </head>
   <body>
 
@@ -23,8 +26,6 @@
     </div>
 
     <div id="main">
-      <div id="users"></div>
-
       <div class="sequencer">
         <div class="machine">
           <img id="carabassa" data-track-id="carabassa-10" src="img/rattle.png" />
@@ -42,14 +43,12 @@
           <img id="claves" data-track-id="claves-6" src="img/hands.png" />
         </div>
 
-        <img id="tempo-dial" src="img/tempo-dial.jpg" />
-
+        <!-- <img id="dial" src="img/tempo-dial.jpg" /> -->
         <div class="left-title"><span class="wide">MR</span><div>808</div></div>
-
         <div class="left-function-box">bd</div>
         <div class="right-function-box"> </div>
         <div class="bottom-bar"> </div>
-        
+
         <table class="step-sequencer">
           <tr>
             <td>
