--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
     <link type="text/css" rel="stylesheet" media="screen" href="css/style.css"></link>
   </head>
   <body>
-
-    <div id="overlay" style="display:none;">
+    <div id="login" class="overlay">
       <div id="login-box">
         <div class="inlay">
           <div>Start Application.</div>
           <input id="submit-nick" class="login-submit" type="submit" value="Submit">
+        </div>
+      </div>
+    </div>
+
+    <div id="orientation" class="overlay">
+      <div class="outter">
+        <div class="middle">
+          <div class="inner">
+            <img src="img/pointer.svg" class="pointer" alt="turn" />
+          </div>
         </div>
       </div>
     </div>
@@ -41,7 +50,7 @@
           <img id="claves" data-track-id="claves-6" src="img/hands.png" />
         </div>
 
-        <!-- <img id="dial" src="img/tempo-dial.jpg" /> -->
+        <img id="tempo-dial" src="img/tempo-dial.jpg" />
         <div class="left-title"><span class="wide">MR</span><div>808</div></div>
         <div class="left-function-box">bd</div>
         <div class="right-function-box"> </div>
@@ -367,8 +376,8 @@
               <div class="clearer"></div>
             </td>
           </tr>
-
         </table>
+        <img src="img/bottombox.png" class="bottombox" alt="bottombox" />
       </div>
     </div>
   </body>
